<resources>
    <string name="domain">http://10.192.46.196:8000</string>
    <string name="app_name">Complaint App</string>

    <string name="title_complaint_details">Complaint Details</string>
    <string name="title_new_user">Add New User</string>
    <string name="title_add_user">Add User</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="notification_string">Notifications</string>
    <string name="new_complaint_string">New Complaint</string>
    <string name="view_complaint_string">View Compalints</string>
    <string name="exit_string">Exit</string>
    <string name="logout_string">Logout</string>
    <string name="action_settings">About Us</string>

    <string name="title_activity_splash_sreen">splashSreen</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="forgotPass">Forgot Password?<a href="http://www.cc.iitd.ernet.in/misc/passwd-reset.pdf">Click Here</a></string>
    <string name="err_msg_name">Please enter a valid User ID</string>
    <string name="err_msg_passwd">Password is empty!!</string>
</resources>
