<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/ac"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    tools:context="com.cyberthieves.trialapp.LoginActivity">

    <!-- Login progress -->


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            android:focusableInTouchMode="true">

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                >

                <EditText
                    android:id="@+id/emailf"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="User ID"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_above="@+id/email"
                    android:layout_marginBottom="6dp"
                    android:layout_alignParentStart="true"
                    android:textColor="#000000"
                    android:background="@drawable/ss"
                    android:drawableStart="@drawable/finaluser"

                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textColorHint="#000000"

                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true">

                <EditText
                    android:id="@+id/passwordf"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:hint="Password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="#000000"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/finalpas"

                    android:background="@drawable/ss"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

            </android.support.design.widget.TextInputLayout>


            <ImageView
                android:layout_width="220dp"
                android:layout_height="100dp"
                android:id="@+id/imageView2"
                android:src="@drawable/logo"
                android:layout_below="@+id/login_progress"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:background="@drawable/ss_b"
                android:textColor="#000000"
                android:layout_below="@+id/imageView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="250dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/forgotPass"
                android:id="@+id/forgPass"
                android:textColor="#000000"
                android:layout_alignTop="@+id/imageView2"
                android:layout_alignEnd="@+id/imageView2"
                android:layout_marginTop="420dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show Password"
                android:id="@+id/pass_show"
                android:checked="false"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
